# hawthorn

./: .clang-format  .clang-tidy  .gitignore  3  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
examples/: lex_test.haw
includes/chunk/: bytecode.h  chunk.h  opcodes.h
includes/interpreter/: vm.h
includes/lexer/: lexer.h  token.h
includes/parser/: compiler.h  parser.h
includes/share/: array.h  common.h  error.h  hawthorn.h  string.h  table.h  util.h
includes/value/: obj.h  value.h
src/: main.c
src/compiler/: CMakeLists.txt
src/interpreter/: CMakeLists.txt  vm.c
src/interpreter/chunk/: chunk.c  opcodes.c
src/lexer/: CMakeLists.txt  lexer.c
src/parser/: CMakeLists.txt  compiler.c  parser.c
src/semantic/: CMakeLists.txt
src/share/: CMakeLists.txt  array.c  error.c  string.c  table.c
src/value/: obj.c  value.c
test/: arithmetics.haw  branching.haw  for.haw  functions.haw  globalvars.haw  test.haw  while.haw
